# MyTinyRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: geometry.h  main.cpp  model.h
src/file/: tgaimage.cpp  tgaimage.h
src/render/: buffer.cpp  image.h  model.cpp  model.h  render.cpp  render.h
src/renderer/: color.h  geometry.cpp  image.h  raw.cpp  raw.h  tgaimage.h
